# Ladaeron-Animos-OS

./: .gitignore  AIREADME.md  AIREADMETODO.md  LICENSE  OS_CHARTER_AND_LICENSE.md  README.md  SHARED_INDEX.md  index.html  package-lock.json  package.json  validate_state.sh
Constitution/: ATLAS_OF_CONSTITUTION.md  CONTRADICTION_REPORT.txt  DEDUP_REPORT.txt  SOVEREIGN_AUDIT_REPORT.md
Constitution/AI_Library/: 19__TITLE_Appendix_A_Foundational_Principles.txt  20__TITLE_Appendix_B_Bill_of_Rights_Expansion.txt  21__TITLE_Appendix_C_Civic_Participation_Protocols.txt  22__TITLE_Appendix_D_Democratic_Process_Safeguards.txt  23__TITLE_Appendix_E_Emergency_Powers_Framework.txt  24__TITLE_Appendix_L_Legislative_Process_Standards.txt  25__TITLE_Appendix_S_Sentience_Recognition_Framework.txt  26__TITLE_Appendix_T_Technology_Governance_Protocols.txt  27__TITLE_Appendix_U_Universal_Access_Guarantees.txt  28__TITLE_Appendix_V_Voting_and_Electoral_Systems.txt  (+7 more)
docs/: PROOPS_OF_DETERMINISM.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/ai/: ollama.rs
src-tauri/src/analyzer/: sat_solver.rs
src-tauri/src/commands/: agent_swarm.rs  bevy_window.rs  filesystem.rs  mod.rs  orchestrator.rs  ui.rs
src-tauri/src/identity/: digital_dna.rs  mod.rs
src-tauri/src/ledger/: memory_anchor.rs  mod.rs
src-tauri/src/metaphysics/: equalingua.rs  mod.rs
src-tauri/src/networking/: mod.rs  p2p_mesh.rs
src-tauri/src/orchestrator/: kernel_override.rs  mod.rs  sentient_firewall.rs
ui/: layout.json
(+39 files in other folders)
