[package]
name = "ladaeron_animos"
version = "0.0.1"
description = "L🜔DΛEЯ⦿N ∆NIM♾S prototype"
authors = ["Fabio"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cargo_metadata = "0.18"
walkdir = "2"
tokio = { version = "1", features = ["rt", "macros"] }
notify = "8.2.0"
bevy = "0.18.0"
sha2 = "0.10.9"
rand = "0.8.5"
chrono = "0.4.44"
sysinfo = "0.30.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
